live-magic (1.3) unstable; urgency=low

  * Sync option specification with live-helper 1.0.1-1.

 -- Chris Lamb <lamby@debian.org>  Mon, 22 Sep 2008 08:01:07 +0100

live-magic (1.2) unstable; urgency=low

  * Support Xfce's "thunar" window manager.
  * Update maintainer email address.
  * Update Depends on live-helper.
  * Translations:
    - Indonesian translation by Iwan Setiawan. (Closes: #498110)
    - Update Italian translation by Fabio Balzano. (Closes: #497390)

 -- Chris Lamb <lamby@debian.org>  Tue, 16 Sep 2008 19:25:41 +0100

live-magic (1.1) unstable; urgency=low

  * Refer to new mailing list in Maintainer field.
  * Try some alternative file managers to open the completed build window other
    than xdg-open.
  * Add translations:
    - Gujurati translation by Kartik Mistry. (Closes: #496876)
    - Italian translation by Fabio Balzano. Additional thanks to Marco
      Amadori and tp.linux.it. (Closes: #496848)
    - Japanese translation by Kobayashi Noritada. Additional thanks to
      Nobuhiro Iwamatsu. (Closes: #497264)
    - Spanish translation by Fabio Balzano. Additional thanks to
      tomas@tuxteam.de and the Spanish language team. (Closes: #496857)

 -- Chris Lamb <chris@chris-lamb.co.uk>  Sun, 31 Aug 2008 19:14:41 +0100

live-magic (1.0) unstable; urgency=low

  * 1.0 release for Lenny:
    - Set default distribution to Lenny.
    - Don't show distribution page when running Lenny as stable.
    - Depend on live-helper >= 1.0.0
  * Add locale and keyboard layout step.
  * Move to Debhelper 7.
  * Add gettext support and translations:
    - Czech translation by Miroslav Kure (Closes: #494548)
    - Finnish translation by Esko Arajärvi (Closes: #495334)
    - French translation by Frederic Daniel Luc Lehobey (Closes: #494742)
    - German translation by Helge Kreutzmann (Closes: #494882)
    - Russian translation by Yuri Kozlov (Closes: #494500)
    - Swedish translation by Martin Ågren (Closes: #494503)
