@@ -1,8 +1,10 @@
 live-magic (1.3) unstable; urgency=low
 
   * Sync option specification with live-helper 1.0.1-1.
+  * Modify mirror auto-detection to ignore the debian-multimedia and
+    volatile.debian.org repositories. (Closes: #502335)
 
- -- Chris Lamb <lamby@debian.org>  Mon, 22 Sep 2008 08:01:07 +0100
+ -- Chris Lamb <lamby@debian.org>  Sat, 18 Oct 2008 00:02:14 +0100
 
 live-magic (1.2) unstable; urgency=low
 
